# Hybrid-Financial

./: .gitignore  PRODUCTION_ARCHITECTURE.md  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  pytest.ini  render.yaml  requirements-local.txt  vercel.json
.github/workflows/: ai-pipeline.yml  (+3 more)
apps/server/: .env.example  Dockerfile  pyproject.toml
apps/server/api/: __init__.py  debate.py  ingest.py
apps/server/app/: config.py  db.py  langgraph_lifespan.py  main.py
apps/server/app/auth/: __init__.py  guards.py  identity.py
apps/server/app/graph/: __init__.py  alert_triage.py  placeholder.py  portfolio.py  registry.py  research.py  sql_graph.py  temporal.py
apps/server/app/rbac/: __init__.py  feature_flags.py  sensitive_sql.py
apps/server/app/routers/: admin.py  alerts.py  audit.py  debate.py  insight.py  portfolio.py  reports.py  research.py  simulation.py  temporal.py
apps/server/app/services/: __init__.py  alert_svc.py  audit.py  portfolio_svc.py  shadow_analyst.py  simulator.py
apps/server/middleware/: __init__.py  rate_limiter.py  redactor.py  request_id.py
apps/server/services/: __init__.py  shadow_analyst.py  simulator.py
apps/server/tests/: test_redactor.py
docs/: cloudflare-cutover-checklist.md  deployment-runbook.md
infra/: docker-compose.prod.yml  docker-compose.yml
postman/: aequitas-web.postman_collection.json
testing_suite/: __init__.py  calculate_faithfulness.py  requirements.txt  test_deepeval_sql_rag.py  test_faithfulness_calculator.py  test_rbac_sql.py  test_reports_memo.py  verify_no_api_keys.py
(+86 files in other folders)
